--- a/stuff/Cargo.toml
+++ b/stuff/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.4"
+tokio = { version = "1.21.2", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
