--- a/stuff/Cargo.toml
+++ b/stuff/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
-tokio = { version = "1.21.2", features = ["full"] }
-reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
+tokio-util = { version = "0.7.3", features = ["codec"] }
+anyhow = {version = "1.0.66"}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
